--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 benishijimi_report/benishijimi_report.pdf
 benishijimi_report/benishijimi_report.synctex.gz
+akatateha_report/akatateha_report.pdf
+akatateha_report/akatateha_report.synctex.gz
