--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ benishijimi_report/benishijimi_report.pdf
 benishijimi_report/benishijimi_report.synctex.gz
 akatateha_report/akatateha_report.pdf
 akatateha_report/akatateha_report.synctex.gz
+akatateha_report/akatateha_report.aux
+akatateha_report/akatateha_report.fdb_latexmk
