--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ akatateha_report/akatateha_report.pdf
 akatateha_report/akatateha_report.synctex.gz
 akatateha_report/akatateha_report.aux
 akatateha_report/akatateha_report.fdb_latexmk
+monkichou_report/monkichou_report.pdf
+monkichou_report/monkichou_report.synctex.gz
