--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ akatateha_report/akatateha_report.aux
 akatateha_report/akatateha_report.fdb_latexmk
 monkichou_report/monkichou_report.pdf
 monkichou_report/monkichou_report.synctex.gz
+kitateha_report/kitateha_report.pdf
+kitateha_report/kitateha_report.synctex.gz
