初回, 20日のレポート追記

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ akatateha_report/akatateha_report.aux
 akatateha_report/akatateha_report.fdb_latexmk
 monkichou_report/monkichou_report.pdf
 monkichou_report/monkichou_report.synctex.gz
+ruritateha_report/ruritateha_report.pdf
+ruritateha_report/ruritateha_report.synctex.gz
